2005-04-11  David S. Miller  <davem@davemloft.net>

	* elf32-sparc.c (elf32_sparc_relocate_section,
	R_SPARC_TLS_LDO_{HIX22,LOX10}): When not shared, transition to
	R_SPARC_TLS_LE_{HIX22,LOX10}.
	(elf32_sparc_relocate_section, R_SPARC_TLS_{LDO,LE}_HIX22): Only
	xor relocation with 0xffffffff if R_SPARC_TLS_LE_HIX22.
	(elf32_sparc_relocate_section, R_SPARC_TLS_{LDO,LE}_LOX10): Only
	or 0x1c00 into relocation if R_SPARC_TLS_LE_HIX22.

2005-04-11  H.J. Lu  <hongjiu.lu@intel.com>

	* coffcode.h (STRING_SIZE_SIZE): Updated to match libcoff-in.h.

2005-04-11  Nick Clifton  <nickc@redhat.com>
	
	* aout-target.h:  Convert to ISO C.
	* aoutf1.h:  Convert to ISO C.
	* aoutx.h:  Convert to ISO C.
	* bout.c:  Convert to ISO C.
	* dwarf1.c:  Convert to ISO C.
	* ecoffswap.h:  Convert to ISO C.
	* freebsd.h:  Convert to ISO C.
	* genlink.h:  Convert to ISO C.
	* ieee.c:  Convert to ISO C.
	* ihex.c:  Convert to ISO C.
	* libcoff-in.h:  Convert to ISO C.
	* mach-o.c:  Convert to ISO C.
	* mach-o.h:  Convert to ISO C.
	* netbsd.h:  Convert to ISO C.
	* ns32k.h:  Convert to ISO C.
	* ns32knetbsd.c:  Convert to ISO C.
	* oasys.c:  Convert to ISO C.
	* pdp11.c:  Convert to ISO C.
	* pef-traceback.h:  Convert to ISO C.
	* pef.c:  Convert to ISO C.
	* pef.h:  Convert to ISO C.
	* riscix.c:  Convert to ISO C.
	* som.c:  Convert to ISO C.
	* som.h:  Convert to ISO C.
	* srec.c:  Convert to ISO C.
	* stabs.c:  Convert to ISO C.
	* sunos.c:  Convert to ISO C.
	* tekhex.c:  Convert to ISO C.
	* versados.c:  Convert to ISO C.
	* version.h:  Convert to ISO C.
	* xcoff-target.h:  Convert to ISO C.
	* xcofflink.c:  Convert to ISO C.
	* xsym.c:  Convert to ISO C.
	* xsym.h:  Convert to ISO C.

2005-04-08  Paul Brook  <paul@codesourcery.com>

	* elf32-arm.c (ARM2THUMB_GLUE_SIZE): Rename...
	(ARM2THUMB_STATIC_GLUE_SIZE): ... to this.
	(ARM2THUMB_PIC_GLUE_SIZE): Define.
	(a2t1p_ldr_insn, a2t2p_add_pc_insn, a2t3p_bx_r12_insn): Add.
	(elf32_arm_to_thumb_stub): Create PIC stubs.